# pydantic2linkml

./: CLAUDE.md  README.md  pyproject.toml
43/075bd24965/: metadata.json
43/075bd24965/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4d/12dd91aa9f/: metadata.json
4d/12dd91aa9f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
94/ab5c7c6311/: metadata.json
94/ab5c7c6311/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
c5/cf75a1596a/: metadata.json
c5/cf75a1596a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
src/pydantic2linkml/: exceptions.py  gen_linkml.py  tools.py
src/pydantic2linkml/cli/: __init__.py
tests/: test_cli.py  test_exceptions.py  test_gen_linkml.py  test_tools.py  test_typing_config.py
