[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic2linkml"
dynamic = ["version"]
description = 'A tool for translating models expressed in Pydantic to LinkML'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # todo: Is this the correct license?
keywords = ["LinkML", "Pydantic"]
authors = [
  { name = "Lon Blauvelt", email = "blauvel@ucsc.edu" },
  { name = "Sebastian Urchs", email = "sebastian.urchs@gmail.com" },
  { name = "Satrajit Ghosh", email = "satra@mit.edu" },
  { name = "Isaac To", email = "isaac.chun.to@gmail.com" },
  { name = "Yaroslav Halchenko", email = "debian@onerussian.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "linkml",
  "pydantic~=2.7,<2.11",
  "PyYAML",
  "typer",
]

[project.urls]
Documentation = "https://github.com/dandi/pydantic2linkml#readme"
Issues = "https://github.com/dandi/pydantic2linkml/issues"
Source = "https://github.com/dandi/pydantic2linkml"

[project.scripts]
pydantic2linkml = "pydantic2linkml.cli:app"

[tool.hatch.version]
path = "src/pydantic2linkml/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.10"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test]
dependencies = [
  "aind-data-schema>=0.38.6",
  "dandischema>=0.10.2",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
  "types-PyYAML",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "types-PyYAML",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic2linkml tests}"

[tool.coverage.run]
source_pkgs = ["pydantic2linkml", "tests"]
branch = true
parallel = true
omit = [
  "src/pydantic2linkml/__about__.py",
]

[tool.coverage.paths]
pydantic2linkml = ["src/pydantic2linkml", "*/pydantic2linkml/src/pydantic2linkml"]
tests = ["tests", "*/pydantic2linkml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "linkml_runtime.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
[tool.ruff.lint]
ignore = [
  # Avoid use of `from __future__ import annotations`
  # because it causes problem with Typer
  "FA100"
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
  # === defaults recommended by hatch ===
  # https://hatch.pypa.io/latest/config/internal/static-analysis/#per-file-ignored-rules
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
  # Allow access to protected members in tests
  "SLF001",
]
